// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with system dark theme 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableHighlight
        descriptionNumberOfLines={2}
        disabled={true}
        style={
          Array [
            false,
            Array [
              Object {
                "padding": 8,
              },
              Array [
                Object {
                  "padding": 0,
                },
                undefined,
              ],
            ],
          ]
        }
        underlayColor="rgba(255, 255, 255, 0.16)"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 8,
                  "width": 40,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "transform": Array [
                        Object {
                          "scaleX": 1,
                        },
                      ],
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ],
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰔎
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "marginVertical": 6,
                  "paddingLeft": 8,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                    },
                    Object {
                      "color": "rgba(255, 255, 255, 0.87)",
                    },
                    Array [
                      Object {
                        "fontWeight": "bold",
                      },
                      undefined,
                    ],
                  ],
                ]
              }
            >
              useSystemTheme
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "justifyContent": "center",
                  "paddingRight": 10,
                },
                Object {},
              ]
            }
          >
            <Switch
              testID="system-theme-switch"
              trackColor={
                Object {
                  "false": "",
                  "true": "#03dac6",
                }
              }
              value={true}
            />
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.12)",
              "height": 0.5,
            },
            undefined,
            undefined,
          ]
        }
      />
      <TouchableHighlight
        descriptionNumberOfLines={2}
        disabled={true}
        style={
          Array [
            false,
            Array [
              Object {
                "padding": 8,
              },
              Array [
                Object {
                  "padding": 0,
                },
                undefined,
              ],
            ],
          ]
        }
        underlayColor="rgba(255, 255, 255, 0.16)"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 8,
                  "width": 40,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "transform": Array [
                        Object {
                          "scaleX": 1,
                        },
                      ],
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ],
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰔎
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "marginVertical": 6,
                  "paddingLeft": 8,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                    },
                    Object {
                      "color": "rgba(255, 255, 255, 0.87)",
                    },
                    Array [
                      Object {
                        "fontWeight": "bold",
                      },
                      undefined,
                    ],
                  ],
                ]
              }
            >
              darkTheme
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "justifyContent": "center",
                  "paddingRight": 10,
                },
                Object {},
              ]
            }
          >
            <Switch
              disabled={true}
              testID="dark-theme-switch"
              trackColor={
                Object {
                  "false": "",
                  "true": "#03dac6",
                }
              }
              value={false}
            />
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.12)",
              "height": 0.5,
            },
            undefined,
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders with system light theme 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableHighlight
        descriptionNumberOfLines={2}
        disabled={true}
        style={
          Array [
            false,
            Array [
              Object {
                "padding": 8,
              },
              Array [
                Object {
                  "padding": 0,
                },
                undefined,
              ],
            ],
          ]
        }
        underlayColor="rgba(0, 0, 0, 0.1)"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 8,
                  "width": 40,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "transform": Array [
                        Object {
                          "scaleX": 1,
                        },
                      ],
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ],
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰔎
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "marginVertical": 6,
                  "paddingLeft": 8,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                    },
                    Array [
                      Object {
                        "fontWeight": "bold",
                      },
                      undefined,
                    ],
                  ],
                ]
              }
            >
              useSystemTheme
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "justifyContent": "center",
                  "paddingRight": 10,
                },
                Object {},
              ]
            }
          >
            <Switch
              testID="system-theme-switch"
              trackColor={
                Object {
                  "false": "",
                  "true": "#03dac4",
                }
              }
              value={true}
            />
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0.12)",
              "height": 0.5,
            },
            undefined,
            undefined,
          ]
        }
      />
      <TouchableHighlight
        descriptionNumberOfLines={2}
        disabled={true}
        style={
          Array [
            false,
            Array [
              Object {
                "padding": 8,
              },
              Array [
                Object {
                  "padding": 0,
                },
                undefined,
              ],
            ],
          ]
        }
        underlayColor="rgba(0, 0, 0, 0.1)"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 8,
                  "width": 40,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "transform": Array [
                        Object {
                          "scaleX": 1,
                        },
                      ],
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ],
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰔎
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "marginVertical": 6,
                  "paddingLeft": 8,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                    },
                    Array [
                      Object {
                        "fontWeight": "bold",
                      },
                      undefined,
                    ],
                  ],
                ]
              }
            >
              darkTheme
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "justifyContent": "center",
                  "paddingRight": 10,
                },
                Object {},
              ]
            }
          >
            <Switch
              disabled={true}
              testID="dark-theme-switch"
              trackColor={
                Object {
                  "false": "",
                  "true": "#03dac4",
                }
              }
              value={false}
            />
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0.12)",
              "height": 0.5,
            },
            undefined,
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;
